--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+//    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'org.testng:testng:7.1.0'
+
+//    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.1'
 
 }
 
 test {
-    useJUnitPlatform()
+//    useJUnitPlatform()
+    useTestNG()
 }
