--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,14 @@ repositories {
 
 dependencies {
 //    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    testImplementation 'org.testng:testng:7.1.0'
-
+//    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'junit:junit:4.13'
 //    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.1'
 
 }
 
 test {
 //    useJUnitPlatform()
-    useTestNG()
+//    useTestNG()
+    useJUnit()
 }
